--- a/transcriptomic_data.html
+++ b/transcriptomic_data.html
@@ -70,135 +70,136 @@
     <h2>MyzusBase - a complete scientific resource for the peach potato aphid.</h2>
   </div>
   <div class="container-fluid structure">
-    <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12">
-        <div class="remit">
-          <h4>Transcriptome sequences for <em>M. persicae</em> clones:</h4>
-          <ul>
-            <li>
-        <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-19/SRR10199527/SRR10199527.1" download>Nicotine Resistant Mpn transcriptome 926B (SRX6919692)</a>
-            </li>
-            <li>
-            <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-21/SRR10199528/SRR10199528.1" download>Nicotine Resistant Mpn transcriptome 410G (SRX6919691)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-15/SRR1019952/SRR10199529.1" download>Nicotine Resistant Mpn transcriptome 410R (SRX6919690)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-19/SRR10199530/SRR10199530.1" download>Nicotine Resistant Mpn transcriptome 5191A (SRX6919689)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-21/SRR10199531/SRR10199531.1" download>Nicotine Susceptible Mp transcriptome 23 (SRX6919688)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-15/SRR1019953/SRR10199532.1" download>Nicotine Susceptible Mp transcriptome US1L (SRX6919687)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-15/SRR1019953/SRR10199533.1" download>Nicotine Susceptible Mp transcriptome NS (SRX6919686)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-21/SRR10199534/SRR10199534.1" download>Nicotine Resistant Mpn genomic dna 8124 (SRX6919685)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-19/SRR10199535/SRR10199535.1" download>Nicotine Resistant Mpn genomic dna 57 (SRX6919684)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-21/SRR10199536/SRR10199536.1" download>Nicotine Resistant Mpn genomic dna 926B (SRX6919683)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-20/SRR10199537/SRR10199537.1" download>Nicotine Resistant Mpn genomic dna 410G (SRX6919682)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-15/SRR1019953/SRR10199538.1" download>Nicotine Susceptible Mp transcriptome 4255A (SRX6919681)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-17/SRR1019953/SRR10199539.1" download>Nicotine Resistant Mpn genomic dna 410R (SRX6919680)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-21/SRR10199540/SRR10199540.1" download>Nicotine Resistant Mpn genomic dna 5191A (SRX6919679)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-19/SRR10199541/SRR10199541.1" download>Nicotine Susceptible Mp genomic dna 23 (SRX6919678)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-20/SRR10199542/SRR10199542.1" download>Nicotine Susceptible Mp genomic dna US1L (SRX6919677)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-15/SRR1019954/SRR10199543.1" donwload>Nicotine Susceptible Mp genomic dna NS (SRX6919676)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-19/SRR10199544/SRR10199544.1" download>Nicotine Susceptible Mp genomic dna 4255A (SRX6919675)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-17/SRR1019954/SRR10199545.1" download>Nicotine Susceptible Mp genomic dna 1X (SRX6919674)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-15/SRR1019954/SRR10199546.1" download>Nicotine Susceptible Mp genomic dna 4106A (SRX6919673)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-15/SRR1019954/SRR10199547.1" download>Nicotine Resistant Mpn transcriptome 8124 (SRX6919672)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-19/SRR10199548/SRR10199548.1" download>Nicotine Resistant Mpn transcriptome 57 (SRX6919671)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos3/sra-pub-run-21/SRR10199549/SRR10199549.1" download>Nicotine Susceptible Mp transcriptome 1X (SRX6919670)</a>
-           </li>
-           <li>
-             <a href="https://sra-downloadb.be-md.ncbi.nlm.nih.gov/sos2/sra-pub-run-15/SRR1019955/SRR10199550.1" download>Nicotine Susceptible Mp transcriptome 4106A (SRX6919669)</a>
-           </li>
-        </ul>
-        </div>
-        <div class="information">
-          <p>
-          <h2>Introduction:</h2>MyzusBase is your first port of call for all things <em>Myzus persicae</em>. This reference site for the peach potato aphid (<em>M. persicae</em>) contains genomic resources from all available globally sourced variants
-          of the species -
-          providing downloadable links to their accessions.</p>
-          <p>It provides information on the latest research on the species, its role as an agricultural crop pest and its development of unprecedented inseciticde resistance which makes it a worldwide food security challenge. </p>
+      <div class="row">
+        <div class=" col-lg-12 col-md-12 col-sm-12 info_window_green">
+
+          <h2>Transcriptomic (RNAseq) <em>M. persicae</em> studies:</h2><br>
+
+          <p><em>M. persicae</em> studies with associated BioPorject accession number and/or sequence data and listed beneath.
+            A brief precis has been produced for each of the studies, and they have been organised by tissue type, namely 'whole body', 'mid-gut' and 'other.' The latter includes 'head' tissue and 'metagenomic' samples.</p>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12">
+      <div class="row">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+          <h2></h2>
+      <p>Study: “The genetic architecture of an aphid (Myzus persicae) host shift: an adaptive walk protected an aphid (Myzus p. nicotianae) and its endosymbiont from plant chemical defences”,(Bass et al)
+        (2020) Outcome: M. persicaes facility to develop insecticide resistance and colonise new hosts e.g. tobacco, has been determined to occur by an adaptive walk, wherein stepwise changes occur in the organism genome, generating genetic novelty e.g. by mutational events BioProject accession:PRJNA574571, Data: Genomic/Transcriptomic</p>
+        <hr>
+        </div>
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
 
-
-        <div id="Myzus_carousel" class="carousel slide" data-ride="carousel" data-interval="false">
-          <div class="carousel-inner carousel_dimensions">
-            <div class="carousel-item active">
-
-              <img class="myzus_image" src="Images/Mpersicae(DavidCappaert_bugwood.org_invasive.org).jpg" alt="Image M. persicae and progeny.">
-              <div class="carousel-caption d-md-block caption_class">
-                <span>&nbsp &nbsp 1/3</span>
-                <span>Mature <em>M. persicae</em> and juveniles (nymphs).</span>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="myzus_image" src="Images/Winged_Myzus_persicae_crop.png" alt="Winged (alate) <em>M.persicae</em>">
-              <div class="carousel-caption d-md-block caption_class">
-                <span>&nbsp &nbsp 2/3</span>
-                <span>Winged phase (alate) <em>M. persicae.</em></span>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="myzus_image" src="Images/Viviparous_aphids.png" alt="Viviparous repoduction in <em>M. persicae.</em>">
-              <div class="carousel-caption d-md-block caption_class">
-                <span>&nbsp &nbsp 3/3</span>
-                <span>Aphid producing clone offspring.</em></span>
-              </div>
-            </div>
+          <h2></h2>
+          <p>Study: Measuring transcriptomic plasticity of M persicae after extended period acclimating to two different hosts. (2021) – No associated paper. Information:  “Myzus persicae clone
+            G006 apterous parthenogenetic female adults whole body RNA-seq” BioProject accession: PRJNA699687. Tissue: unspecified Data: Transcriptomic (RNAseq).</p>
+          <hr>
           </div>
-          <a class="carousel-control-prev button_prev" href="#Myzus_carousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next button_next" href="#Myzus_carousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
+      </div>
+      <div class="row">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+          <h2>:</h2>
+          <p>
+          Study: ”The green peach aphid gut contains host plant microRNAs identified by comprehensive annotation of
+           Brassica oleracea small RNA data” (Wilson et al) (2019) Outcome: Discovery over 1/5 of small RNA reads in
+           the aphid gut belong to the host plant, suggesting plant circulating miRNAs target aphid gene expression.
+           Tissue: gut (Bioproject also contains bacteriocyte data)  Data: Transcriptomic (RNAseq), BioProject accession: PRJNA395356</p>
+            <hr>
 
       </div>
-    </div>
-  </div>
+
+
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+
+          <h2></h2>
+      <p>Study: “The complete mitochondrial genome of Myzus persicae (Sulzer, 1776; Hemiptera: Aphididae) isolated in Korea” (Park et al) (2021)
+        Outcome: The whole mitochondrial genome of M. persicae has been assembled from DNA from bell pepper isolate. BioProject accession: PRJNA667955,
+         Tissue: Whole body, Data: Genomic.</p>
+      <hr>
+
+      </div>
+      </div>
+      <div class="row">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+          <h2></h2>
+      <p>Study: Whole genome sequencing of M. persicae, to study evolution of insecticide resistance and plant-insect interaction (2019)– No associated paper BioProject accession PRJNA559275 Tissue:
+        Body ”sample from M. persicae” Data: Genomic </p>
+        <hr>
+        </div>
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+
+          <h2></h2>
+          <p>Study: M. persicae Transcriptome/Gene expression analysis – comparative study between UVB stressed and unexposed individuals. (2019) – No associated paper.
+BioProject accession: PRJNA558246 Tissue: Unspecified Data: Transcriptomic (RNAseq), not yet available
+</p>
+          <hr>
+          </div>
+      </div>
+      <div class="row">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+          <h2>Mid-gut</h2>
+      <p>Study: “Extracellular endonucleases in the midgut of Myzus persicae may limit the efficacy of orally delivered RNAi.” (Robin et al.) (2019) Outcome: RNAi feasibility as a control agent for
+        M. persicae is limited by the presence of RNAase orthologues enzymes present in the midgut, which means orally administered dsRNA may not produce desired silencing/control effects. BioProject accession: PRJNA556546,
+        Tissue: Mid-gut, whole body and bacteriocyte, Data: Transcriptomic (RNAseq)</p>
+        <hr>
+        </div>
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+
+          <h2></h2>
+          <p>Study:  “An aphid RNA transcript migrates systemically within plants and is a virulence factor." (Chen et al) (2020)  “ Outcome:  M. persicae translocates long non-coding (lnc) RNA transcripts e.g. “Ya” transcript)
+            into host plants, improving their capacity for colonising/reproducing on the host. BioProject accession: PRJNA532419, Data: Transcriptomic (RNAseq).Tissue: Unspecified</p>
+          <hr>
+          </div>
+      </div>
+      <div class="row">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+          <h2></h2>
+      <p>Study: “Bacterial communities of Aphis gossypii and Myzus persicae (Hemiptera: Aphididae) from pepper crops (Capsicum sp.)” (2019) Outcome: Variation in microbial community composition in M. persicae and A. gossypii are
+        driven by aphid species and geography rather than the plant host. Microbial communities of both species characterised by metagenomic sequencing of 16S rRNA subunits obtained from aphid samples.  BioProject accession:  PRJNA529915  Data: Metagenomic (microbial). Tissue: Aphid sample/metagenomic</p>
+        <hr>
+        </div>
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+
+          <h2></h2>
+          <p>Study: “Plant Viruses Transmitted in Two Different Modes Produce Differing Effects on Small RNA-Mediated Processes in Their Aphid Vector” (Heck et al) (2019), Outcome: sRNA mediated immune response to the virus PLRV virus varies between aphid hosts and non-hosts e.g. potato and turnip,
+            and no sRNA immune response occurs in <em>M. persicae</em>. Also infection with PLRV modifies the endosymbiotic relationship between M. persicae  and B. aphidicola.  BioProject accession: PRJNA514359  Data: Transcriptomic (RNA-seq) Tissue: Whole body.</p>
+          <hr>
+          </div>
+      </div>
+      <div class="row">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+          <h2></h2>
+      <p>Study: A transcriptome and library of small citrus pests (2018) – No paper associated BioProject accession: PRJNA445935 Data: Transcriptomic(RNAseq) Tissue: N/A</p>
+        <hr>
+        </div>
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+
+          <h2>Head (and body) tissue</h2>
+          <p>Study: “Shared Transcriptional Control and Disparate Gain and Loss of Aphid Parasitism Genes” (Bos  et al) (2018)  Outcome: Aphids of different species, including M. persicae, encode similar gene numbers and all tested aphid species have a conserved effector pair closely physically linked in the genome. There is also shown to be a shared transcriptional control amongst all test aphid species, regulating effector expression. BioProject accession: PRJEB24317 Tissue: Mixed species (whole body including head-only and body-only tissues). Data: Genomic/Transcriptomic (RNAseq)</p>
+          <hr>
+          </div>
+      </div>
+      <div class="row">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+          <h2></h2>
+      <p></p>
+        <hr>
+        </div>
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+
+          <h2></h2>
+          <p></p>
+          <hr>
+          </div>
+      </div>
+      <div class="row">
+        <div class=" col-lg-12 col-md-12 col-sm-12 info_window_blue clone_data">
+          <h2></h2>
+          <p>Study: Measurement of the green peach aphid transcriptome when subjected to different dietary amino acid dietary exposures. (2020) – No associated paper.
+            Bioproject accession: PRJNA600657, Tissue: Whole body, Data: Transcriptomic (RNAseq)</p>
+          <hr>
+
+        </div>
+      </div>
+
   <div class="links">
     <h4><strong>Links:</strong></h4>
     <br>
