--- a/transcriptomic_data.html
+++ b/transcriptomic_data.html
@@ -75,7 +75,7 @@
 
           <h2>Transcriptomic (RNAseq) <em>M. persicae</em> studies:</h2><br>
 
-          <p><em>M. persicae</em> studies with associated BioPorject accession number and/or sequence data and listed beneath.
+          <p><em>M. persicae</em> studies with associated BioProject accession number and/or sequence data and listed beneath.
             A brief precis has been produced for each of the studies, and they have been organised by tissue type, namely 'whole body', 'mid-gut' and 'other.' The latter includes 'head' tissue and 'metagenomic' samples.</p>
         </div>
       </div>
