--- a/transcriptomic_data.html
+++ b/transcriptomic_data.html
@@ -199,6 +199,7 @@ BioProject accession: PRJNA558246 Tissue: Unspecified Data: Transcriptomic (RNAs
 
         </div>
       </div>
+  </div>
 
   <div class="links">
     <h4><strong>Links:</strong></h4>
