--- a/genomic_resources.html
+++ b/genomic_resources.html
@@ -124,7 +124,7 @@
   <div class="footer">
     <p><strong>Home</strong></p>
     <p>
-      <a href="index.html"><em><img class="favicon" src="M_persicae_icon_round.png" /></a>
+      <a href="index.html"><em><img class="favicon" src="Images/M_persicae_icon_round.png" /></a>
     </p>
     <p>
       2021
