--- a/population_sequencing_data.html
+++ b/population_sequencing_data.html
@@ -90,7 +90,7 @@
          <li> <p>At the bottom of the page, find a link to download a complete clone table, as included in the article
             "Worldwide patterns of genetic diversity underpinning the evolution of resistance to natural and synthetic insecticides in the crop pest <em>Myzus persicae</em>" (Bass et al.)</p></li>
           <li> <p>A table containing data specifically for the downloadble clones can be found at the bottom of the page. </p> </li>
-          <li>The BioProject ID for these sample is PRJNA574571.</li>
+          <li>The BioProject ID for these samples is PRJNA574571.</li>
           </ul>
         </div>
       </div>
@@ -332,11 +332,14 @@
           <hr>
         </div>
       </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="clone_panel_link">
+            <a type="button" class="w100 btn-lg btn-outline-dark" href="Table S2 clone information as CSV.csv" download>Click to download Excel spreadsheet containing data on <em>M. persicae</em> living clone panel (including resistance mutations).</a>
+          </div>
+        </div>
 
-
-
-
-
+      </div>
 
 
   </div>
