--- a/transcriptomic_data.html
+++ b/transcriptomic_data.html
@@ -75,33 +75,45 @@
 
           <h2>Transcriptomic (RNAseq) <em>M. persicae</em> studies:</h2><br>
 
-          <p><em>M. persicae</em> studies with associated BioProject accession number and/or sequence data and listed beneath.
-            A brief precis has been produced for each of the studies, and they have been organised by tissue type, namely 'whole body', 'mid-gut' and 'other.' The latter includes 'head' tissue and 'metagenomic' samples.</p>
+          <p>This section provides a resource to view the transcriptomic study data available for <em>M. persicae</em>, with associated BioProject accession numbers and/or sequence data listed beneath.
+            A brief précis has been produced for each study, and they have been organised according to tissue type, namely; 1.whole body, 2.mid-gut, 3.head/salivary gland, and 4.metagenomic/bacteriocyte samples. This is to highlight possible differential gene expression studies between tissues.</p>
         </div>
       </div>
       <div class="row">
-        <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_green clone_data central">
+          <h2>Tissue Type:</h2>
+      <p>Whole Body</p>
+
+        </div>
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data central">
+
+          <h2>Tissue Type:</h2>
+          <p>Mid Gut</p>
+
+          </div>
+      </div>
+      <div class="row">
+        <div class=" col-lg-6 col-md-12 col-sm-12 info_window_green clone_data">
           <h2></h2>
-      <p>Study: “The genetic architecture of an aphid (Myzus persicae) host shift: an adaptive walk protected an aphid (Myzus p. nicotianae) and its endosymbiont from plant chemical defences”,(Bass et al)
-        (2020) Outcome: M. persicaes facility to develop insecticide resistance and colonise new hosts e.g. tobacco, has been determined to occur by an adaptive walk, wherein stepwise changes occur in the organism genome, generating genetic novelty e.g. by mutational events BioProject accession:PRJNA574571, Data: Genomic/Transcriptomic</p>
-        <hr>
+      <p><strong>Study:</strong> “The genetic architecture of an aphid (<em>Myzus persicae</em>) host shift: an adaptive walk protected an aphid (<em>Myzus p. nicotianae</em>) and its endosymbiont from plant chemical defences” (Bass et al)
+        (2020) </p><p><strong>Outcome:</strong> <em>M. persicae'</em>s facility to develop insecticide resistance and colonise new hosts e.g. tobacco, has been determined to occur by an adaptive walk, wherein stepwise changes occur in the organism's genome, generating genetic novelty e.g. by mutational events,</p><p><strong>Data:</strong> Genomic/Transcriptomic,</p><p><strong>BioProject accession:</strong>PRJNA574571</p>
+
         </div>
         <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
 
           <h2></h2>
-          <p>Study: Measuring transcriptomic plasticity of M persicae after extended period acclimating to two different hosts. (2021) – No associated paper. Information:  “Myzus persicae clone
-            G006 apterous parthenogenetic female adults whole body RNA-seq” BioProject accession: PRJNA699687. Tissue: unspecified Data: Transcriptomic (RNAseq).</p>
-          <hr>
+          <p><strong>Study:</strong> ”The green peach aphid gut contains host plant microRNAs identified by comprehensive annotation of
+           <em>Brassica oleracea</em> small RNA data” (Wilson et al) (2019) </p><p><strong>Outcome:</strong> Discovery that over 1/5 of small RNA reads in
+           the aphid gut belong to the host plant, suggesting plant circulating miRNAs target aphid gene expression.</p>
+            <p><strong>Data:</strong> Transcriptomic (RNAseq) (Bacteriocyte tissue present in addition to gut)</p><p><strong>BioProject accession:</strong> PRJNA395356</p>
           </div>
       </div>
       <div class="row">
         <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
           <h2>:</h2>
-          <p>
-          Study: ”The green peach aphid gut contains host plant microRNAs identified by comprehensive annotation of
-           Brassica oleracea small RNA data” (Wilson et al) (2019) Outcome: Discovery over 1/5 of small RNA reads in
-           the aphid gut belong to the host plant, suggesting plant circulating miRNAs target aphid gene expression.
-           Tissue: gut (Bioproject also contains bacteriocyte data)  Data: Transcriptomic (RNAseq), BioProject accession: PRJNA395356</p>
+          <p>Study: Measuring transcriptomic plasticity of M persicae after extended period acclimating to two different hosts. (2021) – No associated paper. Information:  “Myzus persicae clone
+             G006 apterous parthenogenetic female adults whole body RNA-seq” <strong>BioProject accession:</strong> PRJNA699687. Tissue: unspecified Data: Transcriptomic (RNAseq).</p>
+           <hr>
             <hr>
 
       </div>
@@ -199,7 +211,7 @@ BioProject accession: PRJNA558246 Tissue: Unspecified Data: Transcriptomic (RNAs
 
         </div>
       </div>
-  </div>
+    </div>
 
   <div class="links">
     <h4><strong>Links:</strong></h4>
