--- a/transcriptomic_data.html
+++ b/transcriptomic_data.html
@@ -82,13 +82,13 @@
       <div class="row">
         <div class=" col-lg-6 col-md-12 col-sm-12 info_window_green clone_data central">
           <h2>Tissue Type:</h2>
-      <p>Whole Body</p>
+      <h2>Whole Body</h2>
 
         </div>
         <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data central">
 
           <h2>Tissue Type:</h2>
-          <p>Mid Gut</p>
+          <h2>Mid Gut</h2>
 
           </div>
       </div>
